# phase-coordinates

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml
.claude/: settings.json
docs/: PROGRESS.md  bayesian_two_layer_spec.md  claude_bayesian_two_layer_prompt.md  claude_cycle_fixed_geometry_prompt.md  claude_followup_current_model_diagnostics.md  claude_layer2_reparameterization_prompt.md  cycle_fixed_geometry_model.md  layer2_amplitude_diagnostics_review.md  review-bayesian-robust-cycle-identification.md
docs/debug/: README.md  epoch_finder_metrics.csv  epoch_finder_top_candidates.csv  epoch_finder_validation_report.md  epoch_finder_winding_checks.csv
docs/debug/scripts/: check_winding_final_endpoint.py  debug_layer1.py  debug_layer2_normal.py  diagnose_clean_cycle_residuals.py  diagnose_layer2_amplitude.py  proto_interp.py  proto_interp_numba.py  test_cycle_fixed_synthetic_suite.py  test_laplace_proto.py  test_layer1.py  test_layer1_changing.py  test_layer2.py  test_layer2_cycle_fixed.py  test_layer2_tune.py  test_layer2_tune1000.py  test_utils.py  validate_epoch_finders.py
notebooks/: bayesian_phase_coordinates_demo.ipynb  demo.ipynb  pca_phase_coordinates_demo.ipynb
phase_coordinates/: __init__.py  bayesian.py  core.py  diagnostics.py  epochs.py  geometry.py  period_search.py  scoring.py
phase_coordinates.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_epoch_finder_validation.py  test_phase_coordinates.py  test_pipeline.py
